=head1 NAME

Memcached::libmemcached::Changes - List of significant changes


=head2 Changes in 0.4201 (svn r163) 17th Dec 2008

  Sync with libmemcached 0.42
  Squashed various compile warnings
  Many updates to libmemcached API calls due to API changes
  Merged existing svn tree (which was out of sync) with 
  Daisuke's tree

=head2 Changes in 0.3101 6th Sep 2009

  Sync with libmemcached 0.31
  Now tested against memcached 1.4.1
  Now tested with binary protocol
  Work with newer libmemcached, which returned MEMCACHED_END instead of
    MEMCACHED_SUCCESS on fetch success

=head2 Changes in 0.2501 (svn r163) 17th Dec 2008

  Sync with libmemcached 0.25.

=head2 Changes in 0.2101 (svn r156) 27th May 2008

  Sync with libmemcached 0.21.
  Report memcached version when running tests.
  Skip flags test when using memcached <1.2.4.
  Test consistent hashing thanks to Daisuke Maki.
  Deprecated undocumented calling get() with an array ref as key
    it now generates a warning.
  Added way to specify multiple memcached servers for tests.
  Added -bin option to Makefile.PL to install mem* utilities
    thanks to Jos Boumans.

=head2 Changes in 0.1902 (svn r144) 17th April 2008

  Fixed leak of $memc which prevented DESTROY (and thus memcached_free)
    being called, thanks to Jim Spath and Daisuke Maki.
  Fixed tests to not use whitespace in keys, thanks to Daisuke Maki.

=head2 Changes in 0.1901 (svn r140) 10th April 2008

  Sync with libmemcached 0.19.
  Added walk_stats method for fetching stats via a callback
    thanks to Daisuke Maki.

=head2 Changes in 0.1701 (svn r129) 3rd March 2008

  Sync with libmemcached 0.17.
  Perl API for memcached_version returns the version info.
  Added auto-generated Memcached::libmemcached::constants docs.
  Improved docs.
  Assorted minor fixes.

=head2 Changes in 0.1405 (svn rXXX)

  Added official object-oriented API for perl-specific extensions.
  Allow SubclassName->new as alias for memcached_create.