@@ -1,14 +1,22 @@
 --- #YAML:1.0
-name:                Memcached-libmemcached
-version:             0.4201
-abstract:            Thin fast full interface to the libmemcached client API
-license:             ~
-author:              
+name:               Memcached-libmemcached
+version:            0.4202
+abstract:           Thin fast full interface to the libmemcached client API
+author:
     - Tim Bunce <Tim.Bunce@pobox.com>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
